fix distortion of background

--- a/app/assets/stylesheets/nemestudio.css.scss
+++ b/app/assets/stylesheets/nemestudio.css.scss
@@ -66,7 +66,8 @@ html {
   height: auto;
   
   /* Set up positioning */
-  position: fixed;
+  position: absolute;
+  overflow: hidden;
   top: 0;
   left: 0;
 
